# pose_twist_meskf

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
nodelet/: nodelet_plugins.xml
notes/: EKF filter and node design.odt
src/filter/: CMakeLists.txt  analyticconditionalgaussian_errormeasurement.cpp  analyticconditionalgaussian_errormeasurement.h  analyticconditionalgaussian_posetwisterrorstate.cpp  analyticconditionalgaussian_posetwisterrorstate.h  analyticconditionalgaussian_visualmeasurement.cpp  analyticconditionalgaussian_visualmeasurement.h  error_state_vector.cpp  error_state_vector.h  extendedkalmanfilter_resetcapable.cpp  extendedkalmanfilter_resetcapable.h  input_vector.cpp  input_vector.h  linearanalyticconditionalgaussian_errormeasurement.cpp  linearanalyticconditionalgaussian_errormeasurement.h  linearanalyticconditionalgaussian_visualmeasurement.cpp  linearanalyticconditionalgaussian_visualmeasurement.h  nominal_state_vector.cpp  nominal_state_vector.h  pose_twist_meskf.cpp  pose_twist_meskf.h  vector_conversions.cpp  vector_conversions.h  visual_measurement_error_vector.cpp  visual_measurement_error_vector.h  visual_measurement_vector.cpp  visual_measurement_vector.h
src/nodes/: ekf_base_node.cpp  ekf_base_node.h  meskf_base_node.cpp  meskf_base_node.h  pose_twist_meskf_node.cpp  pose_twist_meskf_node_base.cpp  pose_twist_meskf_node_base.h  pose_twist_meskf_nodelet.cpp  sfly_test_main.cpp  simple_test_main.cpp  test_matrix.cpp
srv/: Start.srv  Stop.srv
test/: .gitignore  Makefile  plot_imu.m  plot_sfly_test_filter.m  plot_simple_test_filter.m  test_sfly_main.cpp
test/sfly/: Makefile  plot3c.m  plot_test_sfly_filter.m  plot_vicon.m
